# powerplant

./: .gitignore  LICENSE  README.md
calibration_robot/: CMakeLists.txt  README.md
calibration_robot_manual_line_mpu/: sdkconfig
common/: RC.c  RC_proxy.c  README.md  config_vars.ods  num_config_vars.h  uart.c
control_backend/: confirmEmail.php  controller.php  controller_what.php  getCommand.php  hideGame.php  index.php  login.php  logout.php  mail_confirmation.bash  mail_notification.bash  register.php  viewer.php
data_to_sd/: CMakeLists.txt  flight_mode_commands.txt  mcconf_vesc6_75_APS_motor_90Kv.xml  mcconf_vesc6_75_APS_motor_90Kv_silent_hfi.xml  mcconf_vesc6_75_Trampa_165Kv_silent_hfi.xml  vesc-code.lisp  vesc-code_old_version_with_stutter.lisp  vesc-code_test_01.lisp
documentation/: README.md
dps-testing/: CMakeLists.txt  sdkconfig
esp_internet_control/: CMakeLists.txt  README.md
groundstation/: README.md  mcconf_vesc6_75_APS_motor_90Kv_silent_hfi_march_2025.xml  mcconf_vesc6_75_Trampa_165Kv_silent_hfi_alternative.xml  sdkconfig.old  vesc-code.lisp  vesc-code_pitch.lisp  vesc-code_test.lisp
i2c_simple/: sdkconfig
in_flight_config/: CMakeLists.txt  README.md
kite/main/: CMakeLists.txt  RC_for_config.c  lora_minimum.c  lora_minimum.h  main.c  my_gpio.c
kite/main/control/: actuator.c  autopilot.c  autopilot.h  controlData.c  controlData.h  rotation_matrix.c  rotation_matrix.h  sensorData.c  sensorData.h
kite/main/helpers/: CMakeLists.txt  math.c
kite/main/i2c_devices/: cat24c256.c  interchip.c
kite/main/pwm/: motors.c  pwm_input.h
(+174 files in other folders)
